--- a/sq/index.po
+++ b/sq/index.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-06 15:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Besnik <besnik@programeshqip.org>, 2018\n"
+"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
 "Language-Team: Albanian (https://www.transifex.com/delta-chat/teams/76181/sq/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -44,7 +44,7 @@ msgstr ""
 #: ../en/index.md:14
 msgctxt "../en/index.md:14"
 msgid "{% include slider-next.html %}"
-msgstr "{% përfshi slider-next.html %}"
+msgstr "{% include slider-next.html %}"
 
 #: ../en/index.md:18
 msgid ""
@@ -59,7 +59,7 @@ msgstr ""
 #: ../en/index.md:20
 msgctxt "../en/index.md:20"
 msgid "{% include slider-next.html %}"
-msgstr "{% përfshi slider-next.html %}"
+msgstr "{% include slider-next.html %}"
 
 #: ../en/index.md:24
 msgid ""
@@ -74,7 +74,7 @@ msgstr ""
 #: ../en/index.md:26
 msgctxt "../en/index.md:26"
 msgid "{% include slider-next.html %}"
-msgstr "{% përfshi slider-next.html %}"
+msgstr "{% include slider-next.html %}"
 
 #: ../en/index.md:29
 msgid ""
@@ -87,7 +87,7 @@ msgstr ""
 #: ../en/index.md:31
 msgctxt "../en/index.md:31"
 msgid "{% include slider-next.html %}"
-msgstr "{% përfshi slider-next.html %}"
+msgstr "{% include slider-next.html %}"
 
 #: ../en/index.md:35
 msgid ""
@@ -102,7 +102,7 @@ msgstr ""
 #: ../en/index.md:37
 msgctxt "../en/index.md:37"
 msgid "{% include slider-next.html %}"
-msgstr "{% përfshi slider-next.html %}"
+msgstr "{% include slider-next.html %}"
 
 #: ../en/index.md:40
 msgid ""
@@ -115,7 +115,7 @@ msgstr ""
 #: ../en/index.md:42
 msgctxt "../en/index.md:42"
 msgid "{% include slider-next.html %}"
-msgstr "{% përfshi slider-next.html %}"
+msgstr "{% include slider-next.html %}"
 
 #: ../en/index.md:45
 msgid ""
