--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -43,7 +43,7 @@ report up front here:
   or on #deltachat IRC on freenode.
 
 
-The morning coffee and other suroundings
+The morning coffee and other surroundings
 -----------------------------------------
 
 <img src="../assets/blog/xi-bjoern1.jpg" width="150" style="float: left; margin: 10px" /> 
