--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -116,7 +116,7 @@ messengers today:
   (who attended together with Neal from the Seqouia Rust/PGP project),
   namely that deltachat-core will immediately encrypt all sent messages 
   to recipients -- in one-side ephemeral mode we simply don't encrypt
-  to ourselves.  Even if the device is seized before the smtp-queue
+  to ourselves.  Even if the device is seized before the SMTP-queue
   is cleared, the messages can not be decrypted. But "encrypt-immediately"
   is to also speed up message sending and works better with flaky networks
   because right now, the actual e-mail message is re-constructed and re-encrypted
