--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -49,7 +49,7 @@ The morning coffee and other surroundings
 <img src="../assets/blog/xi-bjoern1.jpg" width="150" style="float: left; margin: 10px" /> 
 
 Mornings often started around the "coffee-bus" and the plaza next
-to it. While many of us had anxiously prepared for siberian winter it
+to it. While many of us had anxiously prepared for arctic winter it
 turned out we could nicely sit outside most of the time.
 We caught the last warm days as just a week after we left 
 it started to snow. 
