--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -140,7 +140,7 @@ messengers today:
   choose their display name only.  "Joiners" also land in a
   verified group meant to be safe active network/provider attacks. 
   Note that if somebody uses eg deltachat via gmail (lots of gmail usage in Ukraine) 
-  messages be e2e-encrypted against the burner accounts - the temporary
+  messages are e2e-encrypted against the burner accounts - the temporary
   e-mail addresses can be used with any other e-mail address of lawyers,
   radio networks etc. 
 
