--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -165,7 +165,7 @@ building communication tools with users and for users.
 Apart from DeltaChat introductions, key presentations were 
 on topics brought up from locals and participants:
 
-- The right to be plural: decentralization of identities, pseudonymity and security 
+- The right to be plural: Decentralization of identities, pseudonymity and security.
 - Digital security desires, fantasies and needs of real-world users. 
 - The rise of the right-wing in diverse countries across the world: 
   a conversation led by activists from Ukraine, Brazil, Germany and the US.
