--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -167,7 +167,7 @@ on topics brought up from locals and participants:
 
 - The right to be plural: Decentralization of identities, pseudonymity and security.
 - Digital security desires, fantasies and needs of real-world users. 
-- The rise of the right-wing in diverse countries across the world: 
+- The rise of extremism in countries across the world: 
   a conversation led by activists from Ukraine, Brazil, Germany and the US.
 
 It being Halloween, the unconference closed with an afterparty at a
