--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -22,7 +22,7 @@ report up front here:
   The move from GPL to MPL is meant to be more inviting for also commercial
   collaborators as it is now easier to incorporate the core chat/contact and 
   IMAP/SMTP/Autocrypt implementations in all kinds of offerings. 
-  "Chat over Email" is a huge quite open space which relates to
+  "Chat over e-mail" is a huge quite open space which relates to
   a large diversity of players, non-profit and commercial already
   operating in the e-mail space. 
 
