--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -8,7 +8,7 @@ More than a dozen people gathered for a week in Kyiv, Ukraine
 for "Delta-XI", with more things happening than can be reported. 
 This post is a try to both give you some picturesque glimpses of the
 gathering and also highlight technical developments and results from the
-diverse discussions and collaborations which started in Kyiv end
+rich discussion and collaboration originating in Kyiv at the end of
 November/beginning December 2018. The gathering was intentionally
 intertwined with two user-testing sessions which Xenia and
 Vadym professionally conducted with select groups of journalists,
