--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -1,5 +1,5 @@
 ---
-title: Delta-XI in Kyiv 2018 ... a lot of beginnings 
+title: Delta-XI in Kyiv 2018… a lot of beginnings 
 author: holger, moo
 ---
 
