--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -70,7 +70,7 @@ and geographical de-centering. Ukraine is currently going through a
 challenging process of political transformation. Four years after the
 Revolution, how did people manage to maintain and work with infrastructures?
 One of the goals of Delta-XI was to meet with people who really need and will 
-use our technologies: local journalists going to war zones in the East of
+use our technologies: Local journalists going to war zones in the East of
 Ukraine or to the annexed Crimea; activists facing the right-wing
 uprising in big cities like Kyiv or Lviv; and human rights defenders
 working everyday with war refugees or other at-risk groups.
