--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -128,7 +128,7 @@ messengers today:
   after they have been detained. But it can also be useful for
   friends who are moving together in a city and want to offer
   their locations. Note that with DeltaChat there are never any
-  servers or "clouds" involved: you report GPS positions E2E-encrypted
+  servers or "clouds" involved: You report GPS positions E2E-encrypted
   to contacts of your choice. 
 
 - **automated burner account creation** to make it easy for a group
