--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -139,7 +139,7 @@ messengers today:
   scan the token, get random accounts that are deleted after one week and can
   choose their display name only. "Joiners" also land in a
   verified group meant to be safe active network/provider attacks. 
-  Note that if somebody uses eg deltachat via gmail (lots of gmail usage in Ukraine) 
+  Note that if somebody uses e.g. Delta Chat via Gmail (lots of Gmail usage in Ukraine) 
   messages are e2e-encrypted against the burner accounts - the temporary
   e-mail addresses can be used with any other e-mail address of lawyers,
   radio networks etc. 
