--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -5,7 +5,7 @@ author: holger, moo
 
 <img src="../assets/blog/xi-graffity.jpg" width="200" style="float: left; margin: 10px" /> 
 More than a dozen people gathered for a week in Kyiv, Ukraine 
-for "Delta-XI", with more things happening than can be reported. 
+for "Delta-XI", with more things happening than can be reported…
 This post is a try to both give you some picturesque glimpses of the
 gathering and also highlight technical developments and results from the
 rich discussion and collaboration originating in Kyiv at the end of
