--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -168,7 +168,7 @@ on topics brought up from locals and participants:
 - The right to be plural: Decentralization of identities, pseudonymity and security.
 - Digital security desires, fantasies and needs of real-world users. 
 - The rise of extremism in countries across the world: 
-  a conversation led by activists from Ukraine, Brazil, Germany and the US.
+  A conversation led by activists from Ukraine, Brazil, Germany, and the US.
 
 It being Halloween, the unconference closed with an afterparty at a
 local DIY bar where we danced to experimental electronic music and
