--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -114,7 +114,7 @@ messengers today:
   asymetric situation: 1-2 persons in a relatively safe space, often
   abroad, and several people on the ground under recurring threats of
   device seizure and police detention.  Some steps supporting this feature
-  were already taken after Kyiv after a good suggestion from Justus 
+  were already taken following Kyiv, after a good suggestion from Justus 
   (who attended together with Neal from the Seqouia Rust/PGP project),
   namely that deltachat-core will immediately encrypt all sent messages 
   to recipients -- in one-side ephemeral mode we simply don't encrypt
