--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -120,7 +120,7 @@ messengers today:
   to recipients -- in one-side ephemeral mode we simply don't encrypt
   to ourselves. Even if the device is seized before the SMTP-queue
   is cleared, the messages can not be decrypted. But "encrypt-immediately"
-  is to also speed up message sending and works better with flaky networks
+  also speeds up message transit and works better with flaky networks,
   because right now, the actual e-mail message is re-constructed and re-encrypted
   each time network becomes available.
 
