--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -121,7 +121,7 @@ messengers today:
   to ourselves. Even if the device is seized before the SMTP-queue
   is cleared, the messages can not be decrypted. But "encrypt-immediately"
   also speeds up message transit and works better with flaky networks,
-  because right now, the actual e-mail message is re-constructed and re-encrypted
+  because as of right now, the actual e-mail message is re-constructed and re-encrypted
   each time network becomes available.
 
 - **GPS-position streaming** is another facility that we'd like to introduce.
