--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -134,7 +134,7 @@ messengers today:
   to contacts of your choice. 
 
 - **automated burner account creation** to make it easy for a group
-  to setup temporary e-mail accounts and Chat groups for a particular
+  to setup temporary e-mail accounts and chat groups for a particular
   action eg reporting on a demonstration or investigating the whereabouts
   of missed persons.  Idea is that one "inviter" deltachat device 
   will receive a token from the email provider - other deltachat devices 
