--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -149,7 +149,7 @@ messengers today:
 None of these features are fully fleshed out yet. While we have
 very concrete at-risk people in Kyiv in mind while going for these features
 we aim for the development around them to improve DeltaChat's general 
-architecture. Once starting to be usable in preview releases we will 
+architecture. Once proving usable in preview releases, we will 
 consult and user-test again with people in Kyiv…
 
 
