--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -164,7 +164,7 @@ activists and NGOs for a day of talks, discussions and workshops
 around the topics of decentralizing infrastructures and communities,
 building communication tools with users and for users.
 
-Apart from DeltaChat introductions, key presentations were 
+Apart from DeltaChat introductions, key presentations were held
 on topics brought up from locals and participants:
 
 - The right to be plural: Decentralization of identities, pseudonymity and security.
