--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -174,7 +174,7 @@ on topics brought up from locals and participants:
 
 It being Halloween, the unconference closed with an afterparty at a
 local DIY bar where we danced to experimental electronic music and
-sci-fi psychedelic videos, drank home-made spirits and joined in a
+psychedelic sci-fi videos, drank home-made spirits and joined in a
 speculative fiction team game about “cyber apocalypse” and how to save
 the world from robots!
 
