--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -175,7 +175,7 @@ on topics brought up from locals and participants:
 It being Halloween, the unconference closed with an afterparty at a
 local DIY bar where we danced to experimental electronic music and
 psychedelic sci-fi videos, drank home-made spirits and joined in a
-speculative fiction team game about “cyber apocalypse” and how to save
+speculative fictional team game about the long overdue “cyber apocalypse” and how to save
 the world from robots!
 
 <img src="../assets/blog/xi-party1.jpg" width="200" style="float: left; margin: 10px" /> 
