--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -31,7 +31,7 @@ report up front here:
   evolved to completion and is available in
   [Android-dev preview releases](https://github.com/deltachat/deltachat-android-ii/releases)
   and soon also desktop preview releases. What remains before this can become
-  the offical F-droid release is concluding on how we support "shared account" 
+  the offical F-Droid release is concluding on how we support "shared account" 
   usage which earlier in October caused a big discussion on the mailing list,
   basically around the question whether to recommend/aim for using DeltaChat
   on existing or on dedicated standard e-mail accounts.
