--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -38,7 +38,7 @@ report up front here:
 
 - many UI and other improvements to Delta/Desktop which as a result
   is increasingly able to be used for real. [Desktop releases](https://github.com/deltachat/deltachat-desktop/releases) are still labeled preview and there are ongoing struggles to get
-  it to work on Mac and Windows -- if you can advise or help 
+  it to work on macOS and Windows -- if you can advise or help 
   with packaging OpenSSL in Electron apps, please visit us on GitHub
   or on #deltachat IRC on freenode.
 
