--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -49,7 +49,7 @@ The morning coffee and other surroundings
 <img src="../assets/blog/xi-bjoern1.jpg" width="150" style="float: left; margin: 10px" /> 
 <img src="../assets/blog/xi-cernobyl.jpg" width="150" style="float: right; margin: 10px" /> 
 
-Mornings often started around the "coffee-bus" and the plaza next
+Mornings often started around the "coffee-bus" and adjacent plaza.
 to it. While many of us had anxiously prepared for atomic winter it
 turned out we could nicely sit outside most of the time.
 We caught the last warm days as just a week after we left 
