--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -58,7 +58,7 @@ it started to snow.
 
 In between social and technical discussions at "basecamp" and other
 places we took time out to walk across parks, hills, abandoned bridges, 
-visit old soviet monuments and appreciate the secluded hills and woods 
+visit Soviet monuments and appreciate the secluded hills and woods 
 serendipitously chanced upon while exploring the cultural and historical 
 offerings of an ex-Soviet capital.
 
