--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -102,7 +102,7 @@ new planned features for at-risk and other users
 The user-testing coordination crew combined the outcomes of the
 user-testing and needfinding interviews and gave an in-depth
 presentation to the dev team and contributors on the results. Both
-needfinding and user-testing results will also be made publically
+needfinding and user-testing results will also be made publicly
 available in written form.  From subsequent discussions, also involving
 journalists and human right activists, DeltaChat has some new directions
 and features planned that are missing from most if not all other Chat
