--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -109,7 +109,7 @@ and features planned that are missing from most if not all other Chat
 messengers today: 
 
 - **One-side emphemeral channels** which one can set as a new channel
-  mode.  As soon as a video/audio/message has reached the SMTP-server it is
+  mode.  As soon as a video/audio/message has reached the SMTP-server, it is
   deleted on the device. The activists asked for this as they have an
   asymetric situation: 1-2 persons in a relatively safe space, often
   abroad, and several people on the ground under recurring threats of
