--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -169,8 +169,9 @@ on topics brought up from locals and participants:
 
 - The right to be plural: Decentralization of identities, pseudonymity and security.
 - Digital security desires, fantasies and needs of real-world users. 
-- The rise of extremism in countries across the world: 
+- The rise of right-wing extremism in countries across the world: 
   A conversation led by activists from Ukraine, Brazil, Germany, and the US.
+- Backgrounds from operating a non-profit tech-collective e-mail provider 
 
 It being Halloween, the unconference closed with an afterparty at a
 local DIY bar where we danced to experimental electronic music and
@@ -181,6 +182,7 @@ the world from robots!
 <img src="../assets/blog/xi-party1.jpg" width="200" style="float: left; margin: 10px" /> 
 <img src="../assets/blog/xi-party2.jpg" width="200" style="float: left; margin: 10px" /> 
 <img src="../assets/blog/xi-dj.jpg" width="200" style="float: left; margin: 10px" /> 
+<img src="../assets/blog/xi-party3.jpg" width="200" style="float: left; margin: 10px" /> 
 
 
 
