one typo fix and a refined blurb about deltachat-core MPL relicensing

--- a/_posts/2018-11-17-deltaxi.md
+++ b/_posts/2018-11-17-deltaxi.md
@@ -20,11 +20,13 @@ report up front here:
   we re-licensed deltachat-core and released 0.24.1 under the 
   [Mozilla Public License](https://github.com/deltachat/deltachat-core/blob/master/LICENSE). 
   The move from GPL to MPL is meant to be more inviting for also commercial
-  collaborators as it is now easier to incorporate the core chat/contact and 
-  IMAP/SMTP/Autocrypt implementations in all kinds of offerings. 
-  "Chat over e-mail" is a huge quite open space which relates to
-  a large diversity of players, non-profit and commercial already
-  operating in the e-mail space. 
+  collaborators as it is now easier to incorporate DeltaChat's core 
+  chat/contact and IMAP/SMTP/Autocrypt implementations in all kinds of offerings. 
+  "Chat over e-mail" is a huge open space with a large diversity 
+  of potential players, both non-profit and commercial ones. By using deltachat-core
+  you get a solid standards-based C-library that is successfully used in 
+  real-life chat-email apps and is continously refined and maintained. 
+  Let's collaborate :)
 
 - the [single-folder
   milestone](https://github.com/deltachat/deltachat-core/milestone/2?closed=1)
@@ -133,7 +135,7 @@ messengers today:
   servers or "clouds" involved: You report GPS positions end-to-end encrypted
   to contacts of your choice. 
 
-- **automated burner account creation** to make it easy for a group
+- **Automated burner account creation** to make it easy for a group
   to setup temporary e-mail accounts and chat groups for a particular
   action eg reporting on a demonstration or investigating the whereabouts
   of missed persons.  Idea is that one "inviter" deltachat device 
