--- a/_posts/2019-01-23-releases.md
+++ b/_posts/2019-01-23-releases.md
@@ -22,7 +22,7 @@ it's becoming official release time for several efforts:
   we'll see to do another blog post describing more of what's new (tons of things!). 
 
 - **Delta/Desktop 0.100.0**: a new implementation with 
-  [pre-built packages for Linux and Mac, with help for Windows needed](/en/desktop). 
+  [pre-built packages for Linux and Mac, with help for Windows needed](/en/download). 
   The Delta/Desktop effort has evolved over 6 months now and is working nicely
   for many people already. It re-uses parts of the Signal/Desktop application 
   but again we worked a lot on the UX side to get more of a Delta/Android and 
