--- a/_posts/2019-01-23-releases.md
+++ b/_posts/2019-01-23-releases.md
@@ -21,13 +21,18 @@ it's becoming official release time for several efforts:
   and don't need to export/import.  Once it actually reaches F-droid (may take a while)
   we'll see to do another blog post describing more of what's new (tons of things!). 
 
-- **Delta/Desktop 0.100.0**: a new implementation with 
+- **Delta/Desktop 0.100.0**: a new Desktop app with 
   [pre-built packages for Linux and Mac, with help for Windows needed](/en/download). 
   The Delta/Desktop effort has evolved over 6 months now and is working nicely
   for many people already. It re-uses parts of the Signal/Desktop application 
   but again we worked a lot on the UX side to get more of a Delta/Android and 
   Telegram UX feel. Big thanks to Magnus/ralphtheninja, Karissa McKelvey, 
   Jikstra, Simon Laux and many others who helped to make Delta/Desktop a reality. 
+
+  You can use Delta/Desktop standalone, i.e. without a mobile, or in conjunction
+  with a mobile app.  Chat messages and encryption can be shared between Delta apps
+  using the same e-mail account.  Desktop also offers multi-account support which
+  all other platforms don't offer yet. 
 
 - **Delta/iOS Preview 7**: an app installable via Testflight which
   offers basic setup, (encrypted) chatting and sending and display of images,
