--- a/_posts/2019-01-24-releases.md
+++ b/_posts/2019-01-24-releases.md
@@ -3,26 +3,31 @@ title: DeltaChat multi-platform release waves / many thanks!
 author: holger
 ---
 
-A lot of work in the last half year is coming to fruition -- 
-it's becoming official release time for several efforts: 
+A lot of work in the last half year is coming to fruition ... release time!
+Nothing is quite perfect yet but it's working well for many who used
+the incremental releases the last weeks. So here is the list of
+current releases: 
 
-- **Delta/Android 0.100.0**: code was completely revamped and we are now pushing a new
-  F-droid release and soon are aiming for G-play as well.  The [new code](https://github.com/deltachat/deltachat-android) is based
+- **Delta/Android 0.100.0**: code was completely revamped and we just
+  triggered an F-droid release and soon (tm) are aiming for G-play as well.  
+  The [new Android code](https://github.com/deltachat/deltachat-android) is based
   on Signal's UI code instead of the Telegram UI code we used in the last F-droid
   release.  By this, 20-30 long-standing issues could be closed and we have a much nicer 
-  and more maintainable code base now -- note that we also had to work a lot to bring back 
-  the UX look and feel of the Telegram version -- and there are still some things left to be done! 
-  Tons of thanks to Bjoern Petersen, Angelo Fuchs, Daniel Boehrsi, Florian Haar, 
-  Asiel Díaz Benítez, chklump, amplifier, testbird and many others who contributed 
-  code and bug reports!
+  and more maintainable code base now -- yay! 
+
+  Note that we also had to work a lot to bring back the UX look and feel
+  of the Telegram version and there are still some things left to be
+  done!  Tons of thanks to Bjoern Petersen, Angelo Fuchs, Daniel Boehrsi,
+  Florian Haar, Asiel Díaz Benítez, chklump, amplifier, testbird and many
+  others who contributed code and bug reports on a continous basis!
   
   If you have installed and used Android dev releases (thanks!) you will need to run an 
-  export/import cycle if you install from F-Droid app or a [a new dev apk release](https://github.com/deltachat/deltachat-android/releases).  Current F-droid users will just be upgraded
-  and don't need to export/import.  Once it actually reaches F-droid (may take a while)
-  we'll see to do another blog post describing more of what's new (tons of things!). 
+  export/import cycle if you install the F-Droid app or a [a new dev apk release](https://github.com/deltachat/deltachat-android/releases). Current F-droid users will just be upgraded
+  and don't need to export/import.  Once Delta/Android actually appears on F-droid 
+  (may take a while) we'll see to do another blog post describing more of what's new.
 
-- **Delta/Desktop 0.100.0**: a new Desktop app with 
-  [pre-built packages for Linux and Mac, with help for Windows needed](/en/download). 
+- **Delta/Desktop 0.100.0**: the brand-new Desktop app with 
+  [pre-built packages for Linux and Mac (help for Windows needed!)](/en/download). 
   The Delta/Desktop effort has evolved over 6 months now and is working nicely
   for many people already. It re-uses parts of the Signal/Desktop application 
   but again we worked a lot on the UX side to get more of a Delta/Android and 
@@ -31,19 +36,19 @@ it's becoming official release time for several efforts:
 
   You can use Delta/Desktop standalone, i.e. without a mobile, or in conjunction
   with a mobile app.  Chat messages and encryption can be shared between Delta apps
-  using the same e-mail account.  Desktop also offers multi-account support which
+  using the same e-mail account.  Desktop offers multi-account support which
   all other platforms don't offer yet. 
 
-- **Delta/iOS Preview 7**: an app installable via Testflight which
-  offers basic setup, (encrypted) chatting and sending and display of images,
-  and scanning and verification of QR codes. 
+- **Delta/iOS Preview 7**: an iPhone app installable via Testflight.
+  Delta/iOS offers basic setup, (encrypted) chatting and sending and 
+  display of images, and scanning and verification of QR codes. 
 
   Many thanks to Jonas and Alla Reinsch, Friedel Ziegelmayer, humanlikedesaster 
   and the hundreds of folks who tried out earlier TestFlight releases.  
 
-- **deltachat-core on Debian**: recently Micah Anderson who also had
+- **deltachat-core on Debian**: Micah Anderson who also had
   joined us in Kyiv and advises DeltaChat on several levels, managed 
-  to put [deltachat core 0.39.1 into Debian/Unstable](https://tracker.debian.org/pkg/deltachat-core). Many thanks to Drebs and Janka for helping this effort along! 
+  to bring [deltachat core 0.39.1 into Debian/Unstable](https://tracker.debian.org/pkg/deltachat-core). Many thanks to Drebs and Janka for helping this effort along! 
 
 - [new Transifex language
   repo](https://www.transifex.com/delta-chat/delta-chat-app/dashboard/)  which is now 
@@ -70,4 +75,12 @@ When it comes to thanking and mentioning people i'd like to mention a few more s
   the [python bindings](https://py.delta.chat) and various conceptual
   bits and pieces with Deltachat-core. 
 
-- XXX add more  
+- the many folks from befriended projects who [came to
+  Delta-XI in Kyiv](https://delta.chat/en/2018-11-17-deltaxi),
+  the [OpenPGPsummit 2018](https://delta.chat/en/2018-10-22-openpgpsummit) 
+  and other gatherings.  We received and receive a lot of useful help
+  and advise and continue to evolve collaboration with several projects.
+  
+So thanks everyone and let's see what other interesting releases and
+happenings are coming up in 2019 -- quite a few, really, but this blog post is
+already long enough ;) 
