--- a/_posts/2019-01-24-releases.md
+++ b/_posts/2019-01-24-releases.md
@@ -6,14 +6,10 @@ author: holger
 A lot of work in the last half year is coming to fruition ... release time!
 Nothing is quite perfect yet but it's working well for many who used
 the incremental releases the last weeks. So here is the list of
-current releases: 
+current, stabilized releases: 
 
 - **Delta/Android 0.100.0**: code was completely revamped and we just
-  triggered an F-droid release and soon (tm) are aiming for G-play as well.  
-  The [new Android code](https://github.com/deltachat/deltachat-android) is based
-  on Signal's UI code instead of the Telegram UI code we used in the last F-droid
-  release.  By this, 20-30 long-standing issues could be closed and we have a much nicer 
-  and more maintainable code base now -- yay! 
+  triggered an F-droid release and soon (tm) are aiming for G-play as well. The [new Android code](https://github.com/deltachat/deltachat-android) is based on Signal's UI code instead of the Telegram UI code we used in the last F-droid release.  By this, 20-30 long-standing issues could be closed and we have a much nicer and more maintainable code base now -- yay! 
 
   Note that we also had to work a lot to bring back the UX look and feel
   of the Telegram version and there are still some things left to be
