--- a/_posts/2019-01-24-releases.md
+++ b/_posts/2019-01-24-releases.md
@@ -18,7 +18,7 @@ current, stabilized releases:
   others who contributed code and bug reports on a continous basis!
   
   If you have installed and used Android dev releases (thanks!) you will need to run an 
-  export/import cycle if you install the F-Droid app or a [a new dev apk release](https://github.com/deltachat/deltachat-android/releases). Current F-droid users will just be upgraded
+  export/import cycle if you install the F-Droid app or a [new dev apk release](https://github.com/deltachat/deltachat-android/releases). Current F-droid users will just be upgraded
   and don't need to export/import.  Once Delta/Android actually appears on F-droid 
   (may take a while) we'll see to do another blog post describing more of what's new.
 
