add screenshots to blog post

--- a/_posts/2019-01-24-releases.md
+++ b/_posts/2019-01-24-releases.md
@@ -8,6 +8,9 @@ Nothing is quite perfect yet but it's working well for many who used
 the incremental releases the last weeks. So here is the list of
 current, stabilized releases: 
 
+<img src="../assets/blog/2019-01-chatlist.png" width="150" style="float: left; margin: 10px" /> 
+<img src="../assets/blog/2019-01-chat.png" width="150" style="float: left; margin: 10px" /> 
+
 - **Delta/Android 0.100.0**: code was completely revamped and we just
   triggered an F-droid release and soon (tm) are aiming for G-play as well. The [new Android code](https://github.com/deltachat/deltachat-android) is based on Signal's UI code instead of the Telegram UI code we used in the last F-droid release.  By this, 20-30 long-standing issues could be closed and we have a much nicer and more maintainable code base now -- yay! 
 
@@ -16,16 +19,19 @@ current, stabilized releases:
   done!  Tons of thanks to Bjoern Petersen, Angelo Fuchs, Daniel Boehrsi,
   Florian Haar, Asiel Díaz Benítez, chklump, amplifier, testbird and many
   others who contributed code and bug reports on a continous basis!
+
   
   If you have installed and used Android dev releases (thanks!) you will need to run an 
   export/import cycle if you install the F-Droid app or a [new dev apk release](https://github.com/deltachat/deltachat-android/releases). Current F-droid users will just be upgraded
   and don't need to export/import.  Once Delta/Android actually appears on F-droid 
   (may take a while) we'll see to do another blog post describing more of what's new.
 
+<img src="../assets/blog/desktop-screenshot.png" width="320" style="float: left; margin: 10px" /> 
+
 - **Delta/Desktop 0.99.0**: the brand-new Desktop app with 
   [pre-built packages for Linux and Mac (help for Windows needed!)](/en/download). 
   The Delta/Desktop effort has evolved over 6 months now and is working nicely
-  for many people already. It re-uses parts of the Signal/Desktop application 
+  for many already. It re-uses parts of the Signal/Desktop application 
   but again we worked a lot on the UX side to get more of a Delta/Android and 
   Telegram UX feel. Big thanks to Magnus/ralphtheninja, Karissa McKelvey, 
   Jikstra, Simon Laux and many others who helped to make Delta/Desktop a reality. 
@@ -35,12 +41,20 @@ current, stabilized releases:
   using the same e-mail account.  Desktop offers multi-account support which
   all other platforms don't offer yet. 
 
+<img src="../assets/blog/ios_screenshot_chat_list.png" width="150" style="float: left; margin: 10px" /> 
+<img src="../assets/blog/ios_screenshot_chat_view.png" width="150" style="float: left; margin: 10px" /> 
+
 - **Delta/iOS Preview 7**: an iPhone app installable via Testflight.
   Delta/iOS offers basic setup, (encrypted) chatting and sending and 
   display of images, and scanning and verification of QR codes. 
 
   Many thanks to Jonas and Alla Reinsch, Friedel Ziegelmayer, humanlikedesaster 
   and the hundreds of folks who tried out earlier TestFlight releases.  
+
+  Help on iOS development is very welcome. Current development is moving slowly
+  but you will get quick feedback if you try to fix or improve things. 
+  Please checkout the [github repository](https://github.com/deltachat/deltachat-ios)
+  to report bugs or contribute code. 
 
 - **deltachat-core on Debian**: Micah Anderson who also had
   joined us in Kyiv and advises DeltaChat on several levels, managed 
@@ -75,8 +89,10 @@ When it comes to thanking and mentioning people i'd like to mention a few more s
   Delta-XI in Kyiv](https://delta.chat/en/2018-11-17-deltaxi),
   the [OpenPGPsummit 2018](https://delta.chat/en/2018-10-22-openpgpsummit) 
   and other gatherings.  We received and receive a lot of useful help
-  and advise and continue to evolve collaboration with several projects.
+  and advise and continue to evolve collaborations with several projects,
+  among them DAT, Sequoia/pEp, Briar, IPFS, Secure Scuttlebut, K-9 Mail 
+  to name a few. 
   
 So thanks everyone and let's see what other interesting releases and
-happenings are coming up in 2019 -- quite a few, really, but this blog post is
-already long enough ;) 
+happenings are coming up in 2019 -- quite a few i can guess already, 
+but this blog post is already long enough ;) 
